@@ -76,6 +76,7 @@ tarfileset=org.apache.tools.ant.types.TarFileSet
 tokens=org.apache.tools.ant.types.resources.Tokens
 mappedresources=org.apache.tools.ant.types.resources.MappedResourceCollection
 archives=org.apache.tools.ant.types.resources.Archives
+resourcelist=org.apache.tools.ant.types.resources.ResourceList
 
 #Resources (single-element ResourceCollections):
 resource=org.apache.tools.ant.types.Resource
